--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,35 @@
+# Core dependencies
 streamlit>=1.26.0
 pandas>=1.5.3
-numpy>=1.24.3
+numpy>=1.24.3,<2.0.0        # pin to NumPy‑1.x to avoid Thinc build errors
 scikit-learn>=1.2.2
 plotly>=5.15.0
 nltk>=3.8.1
 scipy>=1.10.1
+
+# Embedding models
 sentence-transformers>=2.2.2
 openai>=1.3.0
 tiktoken>=0.5.1
+
+# Advanced NLP
 spacy>=3.6.1
 textblob>=0.17.1
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0-py3-none-any.whl
+
+# Advanced clustering
 hdbscan==0.8.32
+
+# Data export
 openpyxl>=3.1.2
 xlsxwriter>=3.1.2
+
+# Advanced features
 umap-learn>=0.5.4
 gensim>=4.3.1
 wordcloud>=1.9.2
+
+# Utilities
 tqdm>=4.66.1
 python-dotenv>=1.0.0
 requests>=2.31.0
